--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
   "bugs": {
     "url": "https://github.com/IrvingJuarez/Pacman-Remastered/issues"
   },
-  "homepage": "https://github.com/IrvingJuarez/Pacman-Remastered#readme"
+  "homepage": "https://github.com/IrvingJuarez/Pacman-Remastered#readme",
+  "devDependencies": {
+    "html-webpack-plugin": "^5.3.2",
+    "webpack": "^5.44.0",
+    "webpack-cli": "^4.7.2"
+  }
 }
