--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   },
   "homepage": "https://github.com/IrvingJuarez/Pacman-Remastered#readme",
   "devDependencies": {
+    "css-loader": "^5.2.6",
     "html-webpack-plugin": "^5.3.2",
+    "style-loader": "^3.1.0",
     "webpack": "^5.44.0",
     "webpack-cli": "^4.7.2"
   }
