--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/IrvingJuarez/Pacman-Remastered#readme",
   "devDependencies": {
+    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^5.2.6",
     "html-webpack-plugin": "^5.3.2",
     "style-loader": "^3.1.0",
